remove spacing below content on playlists, to prevent white gap below green full width bg

--- a/docs/sites/all/themes/ssd/sass/style.scss
+++ b/docs/sites/all/themes/ssd/sass/style.scss
@@ -339,7 +339,8 @@ header .search-form {
   padding-bottom: 50px;
 }
 /* On module pages, allow sections to set bottom padding */
-body.node-type-article .container-full-width .region-content {
+body.node-type-article .container-full-width .region-content,
+body.node-type-playlist .container-full-width .region-content {
   margin-bottom: 0;
 }
 
